# BrushAlgorithm

./: .gitignore  ArmController.cpp  ArmController.h  ArmControllerBrushAllPath copy.cpp  ArmControllerBrushAllPath.cpp  ArmControllerBrushCenter copy.cpp  ArmControllerBrushCenter.cpp  ArmControllerBrushCenterold.cpp  ArmControllerBrushInSideLeft.cpp  ArmControllerBrushInSideLeftold.cpp  ArmControllerBrushInSideRight.cpp  ArmControllerBrushInSideRightold.cpp  ArmControllerBrushRepeat.cpp  ArmControllerBrushSideAhead copy.cpp  ArmControllerBrushSideAhead.cpp  ArmControllerBrushSideAheadold.cpp  ArmControllerBrushSideLeft copy.cpp  ArmControllerBrushSideLeft.cpp  ArmControllerBrushSideLeft2026212.cpp  ArmControllerBrushSideLeft212.cpp  ArmControllerBrushSideLeftboom.cpp  ArmControllerBrushSideLeftok.cpp  ArmControllerBrushSideLeftrepair.cpp  ArmControllerBrushSideLefts.cpp  ArmControllerBrushSideLefttool.cpp  ArmControllerBrushSideRight.cpp  ArmControllerBrushSideRight315.cpp  ArmControllerBrushSideRightForce.cpp  ArmControllerBrushSideRightdelayrepaired.cpp  ArmControllerBrushSideRightdelayrepairedold.cpp  ArmControllerBrushSideRightold.cpp  ArmControllerBrushSideRightuseful.cpp  ArmControllerBrushUpLeft.cpp  ArmControllerBrushUpLeft12.cpp  ArmControllerBrushUpLeftold.cpp  ArmControllerBrushUpLefts copy.cpp  ArmControllerBrushUpRight.cpp  ArmControllerBrushUpRightforce.cpp  ArmControllerBrushUpRightold.cpp  ArmControllerBrushUpRightuseful.cpp  (+27 more)
api/: Dashboard.cpp  Dashboard.h  DescartesPoint.h  DobotClient.cpp  JointPoint.h
cpp_example/: CMakeLists.txt  VideoCapture.cpp  VideoCapture.hpp  VideoCaptureold.cpp
defaultconfig/: Initmergeredbrush.ply  brushoffsets.json  config.json  mergeredoldboard.ply  model.json  rotationoffset.json  tcp.json  transforms.txt
defaultconfig/center/: center.txt  ee_poses.txt  mesh_direction_pts.npy  picked_path.npy  standard_trajectory.json  standard_trajectory_nocomp.json  transforms.txt
defaultconfig/leftinside/: ee_poses.txt  insideleft.txt  mesh_direction_pts.npy  picked_path.npy  standard_trajectory.json  standard_trajectory_nocomp.json  transforms.txt
defaultconfig/leftside/: ee_poses.txt  mesh_direction_pts.npy  picked_path.npy  sideleft.txt  standard_trajectory.json  support_points.txt  transforms.txt
defaultconfig/leftup/: ee_poses.txt  picked_path.npy  standard_trajectory_nocomp.json  transforms.txt  upleft.txt
defaultconfig/rightinside/: ee_poses.txt  insideright.txt  mesh_direction_pts.npy  picked_path.npy  standard_trajectory.json  standard_trajectory_nocomp.json  support_points.txt  transforms.txt
defaultconfig/rightside/: ee_poses.txt  picked_path.npy  sideright.txt  standard_trajectory.json  standard_trajectory_nocomp.json  support_points.txt  transforms.txt
defaultconfig/rightup/: ee_poses.txt  mesh_direction_pts.npy  picked_path.npy  standard_trajectory_nocomp.json  transforms.txt  upright.txt
defaultconfig/sideahead/: all_segments.txt  ee_poses.txt  picked_path.npy  picked_path.txt  sideahead.txt  sideright.txt  standard_trajectory.json  standard_trajectory_nocomp.json  support_points.txt  transforms.txt
oldcode/: ArmControllerBrushCenter.cpp  ArmControllerBrushInSideLeft.cpp  ArmControllerBrushInSideRight.cpp  ArmControllerBrushSideAhead.cpp  ArmControllerBrushSideLeft.cpp  ArmControllerBrushSideRight.cpp
oldcode2/: ArmControllerBrushCenter.cpp  ArmControllerBrushInSideLeft.cpp  ArmControllerBrushInSideRight.cpp  ArmControllerBrushSideAhead.cpp  ArmControllerBrushUpRight.cpp
trajectory/: requirements.txt
trajectory/python/: GenerateAnyPath.py  GenerateAnyPathCenter.py  GenerateAnyPathRepeat.py  TCPRotation10OthersDorobot.py  tcp_config_util.py  trajectory_paths.py
